syntax = "proto3";

option csharp_namespace = "Congo.Server";

package congo;

service CongoGrpc
{
    rpc PostFen (PostFenRequest) returns (PostFenReply);
    rpc PostMove (PostMoveRequest) returns (PostMoveReply);
    rpc CheckGameId (CheckGameIdRequest) returns (CheckGameIdReply);
    rpc GetFirstFen (GetFirstFenRequest) returns (GetFirstFenReply);
    rpc GetLatestFen (GetLatestFenRequest) returns (GetLatestFenReply);
    rpc GetDbMovesAfter (GetDbMovesAfterRequest) returns (GetDbMovesAfterReply);
}

message PostFenRequest
{
    string fen = 1;
}

message PostFenReply
{
    sint64 gameId = 1;
}

message PostMoveRequest
{
    sint64 gameId = 1;
    sint32 fr = 2;
    sint32 to = 3;
}

message PostMoveReply
{
    sint64 moveId = 1;
}

message CheckGameIdRequest
{
    sint64 gameId = 1;
}

message CheckGameIdReply
{
    bool exist = 1;
}

message GetFirstFenRequest
{
    sint64 gameId = 1;
}

message GetFirstFenReply
{
    string fen = 1;
}

message GetLatestFenRequest
{
    sint64 gameId = 1;
}

message GetLatestFenReply
{
    string fen = 1;
}

message DbMove
{
    sint32 fr = 1;
    sint32 to = 2;
}

message GetDbMovesAfterRequest
{
    sint64 gameId = 1;
    sint64 moveId = 2;
}

message GetDbMovesAfterReply
{
    repeated DbMove moves = 1;
}
